<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e5e5e5"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview2"
                    android:layout_width="63dp"
                    android:layout_height="63dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="38dp"
                    android:layout_marginBottom="26dp"
                    app:cardCornerRadius="75dp">

                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="63dp"
                    android:layout_height="63dp"
                    android:src="@drawable/ellipse_82"
                    android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/all_day_market"
                        android:fontFamily="@font/plus_jaka_semi_bold"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#2D2D2D"/>


                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="33dp"
                        android:text="@string/lorem_ipsem"
                        android:fontFamily="@font/plus_jaka_semi_bold"
                        android:textSize="15sp"/>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="#ffff"
            tools:listitem="@layout/each_card" />

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"


            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="45dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/subtotal_incl_taxes"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="48dp"
                    android:background="@drawable/strike_text"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/aed_500"
                    android:textColor="#888888"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/aed_250"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/delivery_charge"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="213dp"
                    android:layout_marginTop="34dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/free"
                    android:textColor="#3B8231" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="90dp"
                android:background="#ffff"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="39dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/bill_total"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="213dp"
                    android:layout_marginTop="37dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/aed_250_2"
                    android:textColor="#000000"
                    android:textSize="17sp" />

            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                app:cardBackgroundColor="#5388FA"
                tools:ignore="MissingConstraints"
                app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                    android:id="@+id/text10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proceed_to_pay"
                    android:textColor="#ffff"
                    android:textSize="25sp"
                    android:fontFamily="@font/plusjakartasans_medium"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="23dp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>