<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/plus_jaka_semi_bold"
                android:text="@string/tomato"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/plus_jaka_semi_bold"
                android:text="@string/aed_100"
                android:textColor="#2EB34A"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="9dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/card_border"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="7dp"
                    android:src="@drawable/group__1_" />

                <TextView
                    android:layout_width="29dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/plus_jaka_semi_bold"
                    android:text="@string/_1_kg"
                    android:textColor="#505050"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="29dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/add_icon" />


            </LinearLayout>


        </LinearLayout>


        <ImageView
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/image_removebg_preview__10__2" />


    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E7E7E7"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="2dp"/>


    </LinearLayout>



</LinearLayout>
